# jinnlab

./: .gitignore  Dockerfile  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/jinnlab/: __init__.py  app.py  cli.py  db.py  engine.py  strategies.py
tests/: test_db.py  test_engine_contract.py
