[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinnlab"
version = "3.2.1"
description = "Terminal game-theory laboratory for Axelrod matches, Moran processes, tournaments, and strategy analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jeremy Franklin"}]
dependencies = [
  "textual>=0.89",
  "axelrod>=4.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
jinnlab = "jinnlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
